add google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -139,7 +139,7 @@
   </div>
 
   <!-- Google Analytics -->
-  {% include google_analytics.html %}
+  {% include analytics.html %}
 
   <!-- do not remove -->
   <span id="62cd7b7da1aff3196fdc26b60e396df9"></span>
