--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,6 +92,8 @@
                 <i class="ai ai-google-scholar ai-lg" aria-hidden="true"></i>
               </span>
             </p>
+            <br>
+            <p><i>{{ site.data.main_info.word }}</i></p>
         </div>
       </div>
     </section>
