--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,6 +136,7 @@
           </span>
         </div>
       </div>
+      <p>This website was built based on a template by <a href="http://www.martinsaveski.com/"> Prof. Martin Saveski</a>.</p>
     </div>
 
   </div>
